kubia-sample.yml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-sample
spec:
  containers:
  - image: dlnreddy/kubia
    name: kubia
    ports:   
    - containerPort: 8080
      protocol: TCP
