kubia-with-labels-sample.yml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-with-labels
  labels:
    creation-method: manual
    env: test
spec:
  containers:
  - image: dlnreddy/kubia
    name: kubia
    ports:
    - containerPort: 8080
      protocol: TCP
