rc-svc-kubia.yml

apiVersion: v1
kind: Service
metadata:
  name: svc-kubia
spec:
  type: LoadBalancer
  selector: 
    app: kubia
  ports:
  - port: 80
    targetPort: 8080
