svc-kubia-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-kubia-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30123
  selector: 
    app: kubia
