ing-kubia.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-kubia
spec:
  rules:
  - host: kubia.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: svc-kubia-loadbalancer
          servicePort: 80
